2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m: Protect the XSHM code parts with
	#ifdef statements.

2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m (-DPScomposite:...:, -DPSdissolve:...:) Map
	onto GScomposite:toPoint:fromRect:operation:fraction:.
	* Source/gsc/GSGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:) Map onto
	compositeGState:fromRect:toPoint:op:fraction:. 
        * Source/winlib/WIN32GState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:),
	* Source/xlib/XGGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:),
        * Source/cairo/CairoGState.m (-compositeGState:fromRect:toPoint:op:, 
	-dissolveGState:fromRect:toPoint:delta:): Remove these methods.
	* Source/art/composite.m
	(-compositeGState:fromRect:toPoint:op:fraction:): Added.

2009-05-10  Adam Fedor  <fedor@gnu.org>

	* Version 0.17.0

2009-04-04 Riccardo Mottola <rmottola@users.sf.net>

	* Source/x11/XGGLFormat.m,
	Source/x11/XGGLContext.m: reorder instructions for c89 compatibility

2009-03-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
	Return an autorelease instance.
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:),
	* Source/art/ARTGState.m (-GSSetDevice:): Adopt callers.

2009-03-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m: Correct formatting.

2009-03-12 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* Source/x11/XGServerEvent.m:
	Implement key repeat support.

2009-03-07 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGServerEvent.m:
	Fix a bug (from rev.28036) and consolidate the computing of 
	expose rectangle of subwindows.

2009-03-06 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGGLFormat.m:
	Missing var initialization.

2009-03-04 Xavier Glattard <xavier.glattard@online.fr>

	* Source/x11/XGServerEvent.m,