@@ -1288,6 +1288,14 @@ _set_op(cairo_t *ct, NSCompositingOperation op)
 
   [source->ctm boundingRectFor: aRect result: &aRect];
 
+  if ((copyOnSelf) && (cairo_version() >= CAIRO_VERSION_ENCODE(1, 8, 0)))
+    {
+      NSSize size = [_surface size];
+      
+      // For cairo > 1.8 we seem to need this adjustment
+      aRect.origin.y -= 2*(offset.y - size.height);
+    }
+
   x = floorf(aPoint.x);
   y = floorf(aPoint.y + 0.5);
   minx = NSMinX(aRect);
