@@ -1,3 +1,9 @@
+2009-07-10 Fred Kiefer <FredKiefer@gmx.de>
+
+        * Source/cairo/CairoGState.m
+	(-compositeGState:fromRect:toPoint:op:fraction:): Add hack to
+	avoid scrolling problem for cairo > 1.8.	
+
 2009-05-31 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/x11/XWindowBuffer.m: Protect the XSHM code parts with
